# VideoEditor2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: editorwindow.cpp  editorwindow.h  main.cpp  resourcemanager.cpp  resourcemanager.h  video.cpp  video.h
src/gui/timeline/: clipmodel.cpp  clipmodel.h  timelinemodel.cpp  timelinemodel.h  timelineview.cpp  timelineview.h  timelinewidget.cpp  timelinewidget.h
src/gui/viewer/: viewerwidget.cpp  viewerwidget.h
src/vulkan/: vk_descriptors.cpp  vk_descriptors.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_pipelines.cpp  vk_pipelines.h  vk_types.h  vulkanrenderer.cpp  vulkanrenderer.h  vulkanwidget.cpp  vulkanwidget.h  vulkanwindow.cpp  vulkanwindow.h
src/vulkan/shaders/: tex_image.frag  tex_image.frag.spv  tex_image.vert  tex_image.vert.spv
